Revision 0.1.0, released XX-04-2017
-----------------------------------

- SNMP TRAP PDU forwarding implemented
- SNMP PDU OIDs filtering plugin implemented
- Single SNMP request scope context is now served to the plugins (plugin
  API version bumped)

Revision 0.0.3, released 23-04-2017
-----------------------------------

- Sphinx docs added
- PEP8, code style and hardening
- Unspecified trunk-crypto-key now indicates disabled trunk encryption.
- Fix to error-indication usage to comply with newer pysnmp
- Fix to __doc__ use in setup.py to make -O0 installation mode working.
- Fix to PID file creation when running Python 3.
- Copyright notes added to source files
- Author's e-mail changed, copyright extended to year 2017

Revision 0.0.2, released 28-09-2015
-----------------------------------

- Minor fixes towards Python 2.4 compatibility.

Revision 0.0.2rc1, released 14-02-2015
--------------------------------------

- Loadable extention plugin modules infrastructure first introduced.
- Experimental SNMP PDU var-binds logging added.
- Wheel distribution format now supported.

Revision 0.0.2rc0, released 21-01-2015
--------------------------------------

- Multiple fixes supporting Python 2.4-3.4 compatibility.
- Configuration options renamed for better clarity.
- Both source and destination network addresses of SNMP entities
  can now be used for message routing and address spoofing.
- Transparent proxy operation and secondary network interface
  support implemented
- Client-side SNMP timeout/retries now configurable
- Switched to the latest pysnmp API
- snmpEngineId and contextEngineId are always treated as hex in config
- contextEngineId and contextName now configured separately from
  SNMP authentication credentials
- Dead trunk detection implemented
- Switched to Python logging module
- SNMP request PDU type and request OIDs can now be used for request routing
- Fix to SNMPv3 operation on the Client part.

Revision 0.0.1, released 01-04-2014