@@ -45,7 +45,7 @@ plugin-modules-path-list: ./plugins
 
 plugin-group {
   plugin-module: oidfilter
-  plugin-options: config=conf/command-forwarding-filtering/plugins/oidfilter.conf
+  plugin-options: config=${config-dir}/plugins/oidfilter.conf
 
   plugin-id: permit-system-branch
 }
