@@ -5,6 +5,7 @@ Revision 0.1.0, released XX-04-2017
 - SNMP PDU OIDs filtering plugin implemented
 - Single SNMP request scope context is now served to the plugins (plugin
   API version bumped)
+- The ${config-dir} macro support added to some configuration options
 
 Revision 0.0.3, released 23-04-2017
 -----------------------------------
